--- a/index/index.html
+++ b/index/index.html
@@ -41,9 +41,9 @@
   <header>
     <h1 class="headerSetting">Vox Automata</h1>
   </header>
-  <div class="container">
+  <div class="container" id="postSection">
     <section class="postSettings">
-      <p>This is a test post for the Vox Automata Blog.</p>
+      This is a test post for the Vox Automata Blog.
     </section>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
